# comparison-different-jdk-vendors

./: .gitignore  README.md
comparison/: generate_docker_files.py  generated_sizes_report.html  load_test.py  pyproject.toml
comparison/images/: Dockerfile_adoptopenjdk_openjdk11-openj9:alpine  Dockerfile_adoptopenjdk_openjdk11:alpine  Dockerfile_amazoncorretto:11  Dockerfile_amazoncorretto:11-alpine  Dockerfile_amazoncorretto:11-alpine-jdk  Dockerfile_azul_zulu-openjdk-alpine:11  Dockerfile_azul_zulu-openjdk-alpine:11-jre  Dockerfile_azul_zulu-openjdk:11  Dockerfile_bellsoft_liberica-openjdk-alpine-musl:11  Dockerfile_bellsoft_liberica-openjdk-alpine:11  Dockerfile_sapmachine:11  Dockerfile_travactory_docker-openjdk11-kubectl:latest
comparison/templates/: docker_template  report.html  report_row.html
demo/: pom.xml
stats/docker/: performance_report.html
stats/docker/adoptopenjdk_openjdk11-openj9:alpine/: report_1610553640.355006.html
stats/docker/adoptopenjdk_openjdk11:alpine/: report_1610548226.813251.html
stats/docker/amazoncorretto:11/: report_1610542283.564212.html
stats/docker/amazoncorretto:11-alpine/: report_1610544466.358293.html
stats/docker/amazoncorretto:11-alpine-jdk/: report_1610552189.835674.html
stats/docker/azul_zulu-openjdk-alpine:11/: report_1610551501.353955.html
stats/docker/azul_zulu-openjdk-alpine:11-jre/: report_1610545186.434613.html
stats/docker/azul_zulu-openjdk:11/: report_1610550747.047484.html
stats/docker/bellsoft_liberica-openjdk-alpine:11/: report_1610547565.245266.html
stats/kotlin/: report_1610529272.205251.html
(+7 files in other folders)
