[tool.poetry]
name = "comparison"
version = "0.1.0"
description = ""
authors = ["Dmytro Chasovskyi <dmytro.chasovskyi@greenbird.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
locust = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
